=== Desk Mess Mirrored ===
Changelog: April 13, 2014

== Version 2.2.4 ==
= Code =
* Added `dmm_post_meta_link_edit()` function with filter hooks for DRY purposes
* Removed call to `function_exists( 'dynamic_sidebar' )` as required WordPress version precludes its necessity

= CSS =
* Added better list element styles
* Fixed typo on `.wp-caption img` max-width property
* Minor clean-up of old properties

= Miscellaneous =
* Added `Textdomain` to theme header block
* Code reformatted to better meet the WordPress Coding Standards
* Clean-up `readme.txt` file
* Updated Copyright Years

/** ------------------------------------------------------------------------- */
== Version 2.2.3 ==
= Code =
* Added support for Post-Format: Link
* Added DMM_SHOW_PAGE_PERMALINK constant
* Made "Page Permalink" link conditionally display with default as false
* Removed unused $sep_location parameter

= CSS =
* Added appropriate styling for post-format: link related items
* Removed really old browser CSS support ... going with support for current only

= Miscellaneous =
* Added Serbo-Croatian translation by Andrijana Nikolic from webhostinggeeks.com

/** ------------------------------------------------------------------------- */
== Version 2.2.2 ==
= Code =
* Fix comments closed message displaying when comments are open

/** ------------------------------------------------------------------------- */
== Version 2.2.1 ==
= Code =
* Expanded use of DMM_HOME_DOMAIN constant
* Change featured image to display full and centered across posts
* Corrected closed comments logic to properly display message
* Refactored author "About" box to not show empty details

= CSS =
* Added ordered list styles for pages with comments
* Added classes to author "About" box details for easier display manipulation
* Added site title and description id to appropriate HTML container
* Adjusted '.wp-caption img' properties
* Adjusted 'li.text_widget' margin values