@@ -30,7 +30,7 @@
       <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="10" column="0" selection-start="318" selection-end="318" vertical-scroll-proportion="0.22354695" vertical-offset="0" max-vertical-offset="7245">
+            <state line="11" column="53" selection-start="424" selection-end="424" vertical-scroll-proportion="0.24590164" vertical-offset="0" max-vertical-offset="7260">
               <folding />
             </state>
           </provider>
@@ -39,7 +39,7 @@
       <file leaf-file-name="style.css" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/style.css">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="1037" column="24" selection-start="17075" selection-end="17075" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="26895">
+            <state line="1049" column="16" selection-start="17251" selection-end="17251" vertical-scroll-proportion="0.0" vertical-offset="15374" max-vertical-offset="27015">
               <folding />
             </state>
           </provider>
@@ -463,7 +463,11 @@
       <created>1397432217717</created>
       <updated>1397432217717</updated>
     </task>
-    <option name="localTasksCounter" value="54" />
+    <task id="LOCAL-00054" summary="* Fixed typo on `.wp-caption img` max-width property">
+      <created>1397432497673</created>
+      <updated>1397432497673</updated>
+    </task>
+    <option name="localTasksCounter" value="55" />
     <servers />
   </component>
   <component name="TodoView" selected-index="0">
@@ -528,7 +532,6 @@
     <option name="myTodoPanelSettings">
       <TodoPanelSettings />
     </option>
-    <MESSAGE value="* Adjusted '.wp-caption img' properties" />
     <MESSAGE value="* Adjusted various CSS elements and properties to display TUT data more correctly" />
     <MESSAGE value="* Code cleanup" />
     <MESSAGE value="* Refactored author &quot;About&quot; box to not show empty details&#10;* Added classes to author &quot;About&quot; box details for easier display manipulation" />
@@ -553,7 +556,8 @@
     <MESSAGE value="* Removed call to `function_exists( 'dynamic_sidebar' )` as required WordPress version precludes its necessity" />
     <MESSAGE value="* Added `Textdomain` to theme header block" />
     <MESSAGE value="* Added `dmm_post_meta_link_edit()` function with filter hooks for DRY purposes" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Added `dmm_post_meta_link_edit()` function with filter hooks for DRY purposes" />
+    <MESSAGE value="* Fixed typo on `.wp-caption img` max-width property" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Fixed typo on `.wp-caption img` max-width property" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="true" />
   </component>
   <component name="XDebuggerManager">
@@ -739,14 +743,14 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/style.css">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="1037" column="24" selection-start="17075" selection-end="17075" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="26895">
+        <state line="1049" column="16" selection-start="17251" selection-end="17251" vertical-scroll-proportion="0.0" vertical-offset="15374" max-vertical-offset="27015">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/changelog.txt">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="10" column="0" selection-start="318" selection-end="318" vertical-scroll-proportion="0.22354695" vertical-offset="0" max-vertical-offset="7245">
+        <state line="11" column="53" selection-start="424" selection-end="424" vertical-scroll-proportion="0.24590164" vertical-offset="0" max-vertical-offset="7260">
           <folding />
         </state>
       </provider>
