@@ -9,6 +9,7 @@ Changelog: April 13, 2014
 = CSS =
 * Added better list element styles
 * Fixed typo on `.wp-caption img` max-width property
+* Fixed `.wp-caption` left and right alignment issues
 * Minor clean-up of old properties
 
 = Miscellaneous =
